Edited wiki page through web user interface.

--- a/wiki/MailingList.wiki
+++ b/wiki/MailingList.wiki
@@ -1,3 +1,5 @@
+#summary Mailing List
+
 Discuss and participate in the development of Meta-Game by joining the development mailing list: [mailto:metagame-devel@googlegroups.com metagame-devel@googlegroups.com]
 
 Also accessible via HTTP with Google Groups: http://groups.google.com/group/metagame-devel
